*xmms-plugins-1.0 (28 Jun 2003)

  28 Jun 2003; Jan Schubert <Jan.Schubert@GMX.li> xmms-plugins-1.0: A
  rollup package of all xmms-plugins in portage. If you add/delete any
	xmms plugins, make sure to add an entry for your addition.